fixed z-index again

--- a/src/components/CreatePartyPage/Form/Web_shop/style.scss
+++ b/src/components/CreatePartyPage/Form/Web_shop/style.scss
@@ -64,7 +64,7 @@
     background-image: url("data:image/svg+xml,%3Csvg width='264' height='264' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23008A64' fill-rule='nonzero'/%3E%3C/svg%3E ");
     background-position-x: -30%;
     background-position-y: -50%;
-    z-index: 10 !important;
+    z-index: 1 !important;
     position: absolute;
     width: 100%;
     height: 100%;
